crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_accepts_clean_link_options.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== context.md =====
# context.ts

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Reference

<details id="commandcontext" class="ox-api-entry">
  <summary><span class="ox-api-entry__kind">interface</span><span class="ox-api-entry__summary-main"><code class="ox-api-entry__signature ox-api-entry__signature--highlighted language-typescript">CommandContext</code><span class="ox-api-entry__description">Runtime context.</span></span></summary>
  <div class="ox-api-entry__body">
<div class="ox-api-entry__prose">
<p>Runtime context.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface CommandContext</code></pre>
</div>
  </div>
</details>

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like `@api transform` to limit results to the generated API reference.

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

<details class="ox-api-module">
  <summary>
    <span class="ox-api-module__title"><a href="/api-ox/context">context</a></span>
    <span class="ox-api-module__count">1 symbol</span>
  </summary>
  <div class="ox-api-module__body">
    <ul class="ox-api-module__list">
      <li><span class="ox-api-module__kind">interface</span><div class="ox-api-module__item"><a href="/api-ox/context#commandcontext" class="ox-api-module__link"><code class="ox-api-module__signature ox-api-module__signature--highlighted language-typescript">CommandContext</code></a><span class="ox-api-module__summary">Runtime context.</span></div></li>
    </ul>
  </div>
</details>
