crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_accepts_display_format_options.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default.md =====
# default

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

_1 symbols · 1 functions · 1 parameters_

## Reference

### make

Make a thing.

#### Signature

```ts
export function make(value: string): void
```

#### Parameters

| Name | Type | Description |
| --- | --- | --- |
| `value` | `string` | Input value. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like `@api transform` to limit results to the generated API reference.

_1 modules · 1 symbols · 1 functions · 1 parameters_

## Modules

### [default](./default.md) — 1 symbol

- [`make`](./default.md#make) `function` `make(value: string): void` - Make a thing.
