crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_accepts_typedoc_path_strategy.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/cli.md =====
# Function: cli()

<div id="cli" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Runs <a href="/api/default/interfaces/Command">Command</a>.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function cli(): void</code></pre>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [cli](/api/default/functions/cli) | Runs [Command](/api/default/interfaces/Command). |

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Command](/api/default/interfaces/Command) | Runtime command. |

===== default/interfaces/Command.md =====
# Interface: Command

<div id="command" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Runtime command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface Command</code></pre>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
</div>

## Modules

- [default](/api/default)
