crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_collapses_multiline_linked_type_parameter_defaults.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/plugin.md =====
# Function: plugin()

## Signature

```ts
export function plugin(): void
```

## Type Parameters

| Name |
| --- |
| `Extension` |
| `ResolvedDepExtensions` |
| `PluginExt` *extends* [`PluginExtension`](../type-aliases/PluginExtension.md)\<`Extension`, [`DefaultGunshiParams`](../type-aliases/DefaultGunshiParams.md)\> = [`PluginExtension`](../type-aliases/PluginExtension.md)\<`Extension`, `ResolvedDepExtensions`\> |
===== default/index.md =====
# default

_3 symbols · 1 functions · 2 types_

## Functions

- [plugin](./functions/plugin.md)

## Type Aliases

- [DefaultGunshiParams](./type-aliases/DefaultGunshiParams.md)
- [PluginExtension](./type-aliases/PluginExtension.md)

===== default/type-aliases/DefaultGunshiParams.md =====
# Type Alias: DefaultGunshiParams

## Signature

```ts
export type DefaultGunshiParams = unknown
```
===== default/type-aliases/PluginExtension.md =====
# Type Alias: PluginExtension

## Signature

```ts
export type PluginExtension = unknown
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 3 symbols · 1 functions · 2 types_

## Modules

- [default](./default/index.md)
