crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_dedupes_cross_entrypoint_reexports.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== context/functions/createCommandContext.md =====
# Function: createCommandContext()

<div id="createcommandcontext" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Creates a command context.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function createCommandContext(): void</code></pre>
</div>
</div>
===== context/index.md =====
# context

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [createCommandContext](./functions/createCommandContext.md) | Creates a command context. |

===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>functions</span>
</span>
</div>

## References

### createCommandContext

Re-exports [createCommandContext](../context/functions/createCommandContext.md)

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>functions</span>
</span>
</div>

## Modules

- [context](./context/index.md)
- [default](./default/index.md)
