crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_does_not_escape_return_union_pipe_inside_inline_code.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/cli.md =====
# Function: cli()

Run the command.

## Signature

```ts
export function cli(entry: Command<G> | CommandRunner<G>): Promise<string | undefined>
```

## Parameters

| Name | Type | Description |
| --- | --- | --- |
| `entry` | `Command<G> \| CommandRunner<G>` | Command entry. |

## Returns

`Promise<string | undefined>` — A rendered usage or undefined.
===== default/index.md =====
# default

_1 symbols · 1 functions · 1 parameters · 1 returns_

## Functions

- [cli](./functions/cli.md) - Run the command.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions · 1 parameters · 1 returns_

## Modules

- [default](./default/index.md)
