crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_group_order_reorders_module_index.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/alpha.md =====
# Function: alpha()

## Signature

```ts
export declare const alpha: unknown
```
===== default/index.md =====
# default

_2 symbols · 1 functions · 1 variables_

## Variables

- [VERSION](./variables/VERSION.md)

## Functions

- [alpha](./functions/alpha.md)

===== default/variables/VERSION.md =====
# Variable: VERSION

## Signature

```ts
export declare const VERSION: unknown
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 1 functions · 1 variables_

## Modules

- [default](./default/index.md)
