crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_property_members_format_table_renders_html.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Options](./interfaces/Options.md) | Request options. |

===== default/interfaces/Options.md =====
# Interface: Options

<div id="options" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span>
<div class="ox-api-entry__prose">
<p>Request options.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface Options</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="property-http">
  <td><code>http</code></td>
  <td><code class="ox-api-entry__member-type language-typescript">{ timeout?: number }</code></td>
  <td><div class="ox-api-entry__member-description">HTTP options.</div></td>
</tr>
<tr class="ox-api-entry__property-members-row"><td colspan="3"><table class="ox-api-entry__property-members-table"><thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead><tbody>
<tr>
  <td><code>timeout</code><span class="ox-api-badge">optional</span></td>
  <td><code class="ox-api-entry__member-type language-typescript">number</code></td>
  <td><div class="ox-api-entry__member-description">Request timeout.</div></td>
</tr>
</tbody></table></td></tr>
</tbody>
</table>
</div>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Modules

- [default](./default/index.md)
