crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_render_style_markdown_omits_html.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== context.md =====
# context.ts

> 1 documented symbol. Read the signatures first, then expand each item for parameters, return types, and examples.

_1 symbols · 1 interfaces_

## Reference

### CommandContext

Runtime context.

#### Signature

```ts
export interface CommandContext
```

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

> Use search scopes like `@api transform` to limit results to the generated API reference.

_1 modules · 1 symbols · 1 interfaces_

## Modules

### [context](./context.md) — 1 symbol

- [`CommandContext`](./context.md#commandcontext) `interface` `CommandContext` - Runtime context.
