crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_renders_index_signature_members.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/index.md =====
# default

_2 symbols · 2 interfaces · 1 members_

## Interfaces

- [Args](./interfaces/Args.md) - Arguments.
- [ArgSchema](./interfaces/ArgSchema.md) - Value type.

===== default/interfaces/ArgSchema.md =====
# Interface: ArgSchema

Value type.

## Signature

```ts
export interface ArgSchema
```
===== default/interfaces/Args.md =====
# Interface: Args

Arguments.

## Signature

```ts
export interface Args
```

## Indexable

```ts
readonly [option: string]: ArgSchema
```

Argument schema by option name.
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 2 interfaces · 1 members_

## Modules

- [default](./default/index.md)
