crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_renders_module_description_in_typedoc_index.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== context/functions/createCommandContext.md =====
# Function: createCommandContext()

Creates a command context.

## Signature

```ts
export function createCommandContext(): void
```
===== context/index.md =====
# context

The entry for gunshi context.

## Example

```ts
createCommandContext()
```

_1 symbols · 1 functions · 1 examples_

## Functions

- [createCommandContext](./functions/createCommandContext.md) - Creates a command context.

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 1 symbols · 1 functions · 1 examples_

## Modules

- [context](./context/index.md) - The entry for gunshi context.
