crates/ox_content_napi/src/tests/snapshots/generate_docs_markdown_renders_return_members.snap
---
source: crates/ox_content_napi/src/tests.rs
---
===== default/functions/resolveArgs.md =====
# Function: resolveArgs()

Resolve.

## Signature

```ts
export function resolveArgs(): object
```

## Returns

`object` — Resolved args.

### values

```ts
values: ArgValues<A>;
```
===== default/index.md =====
# default

_2 symbols · 1 functions · 1 types · 1 returns_

## Functions

- [resolveArgs](./functions/resolveArgs.md) - Resolve.

## Type Aliases

- [ArgValues](./type-aliases/ArgValues.md)

===== default/type-aliases/ArgValues.md =====
# Type Alias: ArgValues

## Signature

```ts
export type ArgValues = unknown
```
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

_1 modules · 2 symbols · 1 functions · 1 types · 1 returns_

## Modules

- [default](./default/index.md)
